tests/baselines/reference/dependentReturnType.errors.txt
tests/cases/compiler/dependentReturnType.ts(11,9): error TS2322: Type 'boolean' is not assignable to type 'A[narrow x]'.
  Type 'boolean' is not assignable to type 'string'.


==== tests/cases/compiler/dependentReturnType.ts (1 errors) ====
    interface A {
        1: number;
        2: string;
    }
    
    function foo(x: 1 | 2): A[narrow x] {
        if (x === 1) {
            return 0;
        }
        else {
            return false;
            ~~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'A[narrow x]'.
!!! error TS2322:   Type 'boolean' is not assignable to type 'string'.
        }
    }
    
    const r: number = foo(1);
    const r2: string = foo(2);
    const r3 = foo(undefined as any as (1 | 2));